--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,12 @@
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
-    "angular-scenario": "~1.2.0"
+    "angular-scenario": "~1.2.0",
+    "angular-bootstrap": "~0.12.0",
+    "angular-cookies": "~1.3.5",
+    "angular-resource": "~1.3.5",
+    "angular-sanitize": "~1.3.5",
+    "angular-loading-bar": "~0.6.0"
   },
   "appPath": "app"
 }
